--- a/app/templates/app/blogpost.html
+++ b/app/templates/app/blogpost.html
@@ -8,6 +8,7 @@
 {% endif %}
 <p> {{post_1.content|linebreaksbr}} </p>      {# вывод текста по абзацам#}
 <p><a href="{% url 'blog' %}"> Назад </a> </p>
+<p>{{post_1.author}}</p>
 
 {% if user.is_authenticated %}
     <h3>Добавить комментарий</h3>
