--- a/app/templates/app/layout.html
+++ b/app/templates/app/layout.html
@@ -32,7 +32,7 @@
                     <li><a href="{% url 'about' %}">О нас</a></li>
                     <li><a href="{% url 'contact' %}">Контакты</a></li>
                     <li><a href="{% url 'blog' %}">Блог</a></li>
-                    <li><a href="{% url 'anketa' %}">Анкета</a></li>
+                    <li><a href="{% url 'anketa' %}">Оставить заявку</a></li>
                     <li><a href="{% url 'videopost' %}">Видео</a></li>
                 </ul>
                 {% include 'app/loginpartial.html' %}
