--- a/static/app/content/site.css
+++ b/static/app/content/site.css
@@ -40,3 +40,7 @@ input[type="checkbox"].input-validation-error {
 .validation-summary-valid {
     display: none;
 }
+
+h5 {
+    color: #2ffe3a;
+}
