--- a/static/app/content/bootstrap.css
+++ b/static/app/content/bootstrap.css
@@ -315,7 +315,7 @@ body {
   font-size: 14px;
   line-height: 1.428571429;
   color: #333333;
-  background-color: #ddd;
+  background-color: #999;
 }
 
 input,
@@ -337,7 +337,6 @@ textarea {
 a {
   color: #428bca;
   text-decoration: none;
-  font-weight: bolder;
 }
 
 a:hover,
@@ -4526,7 +4525,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
 
 .navbar-inverse .navbar-nav > li > a:hover,
 .navbar-inverse .navbar-nav > li > a:focus {
-  color: #dddd;
+  color: #ffffff;
   background-color: transparent;
 }
 
@@ -6168,15 +6167,16 @@ body.modal-open,
 }
 
 .carousel-caption {
-    right: 15%;
-    bottom: 20px;
-    left: 15%;
-    z-index: 10;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    color: black;
-    text-align: center;
-    text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6);
+  position: absolute;
+  right: 15%;
+  bottom: 20px;
+  left: 15%;
+  z-index: 10;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  color: #ffffff;
+  text-align: center;
+  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6);
 }
 
 .carousel-caption .btn {
