--- a/app/templates/app/blogpost.html
+++ b/app/templates/app/blogpost.html
@@ -4,17 +4,16 @@
 
 <h2> {{post_1.title}} </h2>
 {% if post_1.image and post_1.image.url != '/media/temp.jpg' %}
-<img src="{{ post_1.image.url }}" alt="Картинка статьи блога" width="200" height="200" />
+<img src="{{ post_1.image.url }}" alt="Картинка" width="200" height="200" />
 {% endif %}
 <p> {{post_1.content|linebreaksbr}} </p>      {# вывод текста по абзацам#}
 <p><a href="{% url 'blog' %}"> Назад </a> </p>
-<p>{{post_1.author}}</p>
 
 {% if user.is_authenticated %}
     <h3>Добавить комментарий</h3>
     <form method="POST" >{% csrf_token %} {# защита от атак CSRF#}
     <div>
-        {{form.as_p}}   
+        {{form.as_p}}
         <button type="submit" class="save btn btn-default" > Отправить комментарий </button>
     </div>
     </form>
